--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -8,6 +8,29 @@ a {
 	color: #8181ff;
 }
 
+.page-wrapper {
+	display: flex;
+	flex-direction: column;	
+	width: 100vw;
+	height: 100vh;
+}
+.page-content {
+	flex-grow: 1;
+	overflow: auto;
+	padding: 0em;
+	display: flex;
+	flex-flow: column;
+}
+.page-content > * {
+	flex-grow: 1;
+}
+.footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;;
+}
+
 form {
 	padding: 0.5em;
 }
@@ -94,10 +117,11 @@ form input[type="text"]{
 	justify-content: center;
 	align-items: center;
 }
-
+.registration-page.custom-form > label,
 .login-form .action-group {
 	display: flex;
 	flex-direction: row;
+	margin-bottom: 0.3em;
 }
 
 .login-form label {
@@ -119,4 +143,19 @@ form input[type="text"]{
 .navigate-button:hover {
 	text-decoration: underline white;
 	cursor: pointer;
+}
+.registration-submit,
+.login-submit {
+	color: white;
+	font-size: 1.1em;
+	margin-top: 0.5em;
+}
+.view-registration-page {
+	margin-bottom: 2em;
+}
+.page-headline {
+}
+.headline-subtitle {
+	font-size: 0.8em;
+	margin-bottom: 2em;
 }
